Sec15_Chap161-XXX: optimized code test